--- a/re(sume).html
+++ b/re(sume).html
@@ -40,7 +40,7 @@
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
-                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="#">codingtwogo</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
