--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--java stuff-->
         <script type="text/javascript" src="java.js"></script>
     </head>
-  <!-- Visible content for the page -->
+  <!-- Visible content for the page-->
   <!--main page text below-->
   <body class="mainbody">
     <div class="papaflex">
@@ -37,7 +37,7 @@
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
-                <li><a class="navtext" href="#">FDSA</a></li>
+                <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="#">3D Modeling</a></li>
                 <li><a class="navtext" href="#">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
