caved on img smh

--- a/re(sume).html
+++ b/re(sume).html
@@ -19,7 +19,7 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Anders%20Law%20Resume%20.pdf"/> 
+                <img class="resumeimage" src="Anders Law Resume J24.pdf"/> 
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
