github copilot time baby

--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -19,7 +19,13 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="resumeimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
+                <span>Target Market</span>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
