--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -19,10 +19,14 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
+            <span>name jeff</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/> 
+            </div>
+            <div class="rowbox">
+                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+            </div>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
