--- a/re(sume).html
+++ b/re(sume).html
@@ -19,7 +19,7 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Night%20Swimming.jpg"/> 
+                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Anders%20Law%20Resume%20jpg.jpg"/>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
