image sizing fixed

--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -19,13 +19,35 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <span>name jeff</span>
+            <span>text here</span>
             <div class="rowbox">
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Night%20Swimming.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Original%20Fence.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Sienna%20Steps.jpg"/> 
             </div>
+            <span>text here</span>
             <div class="rowbox">
-                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
-                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Butcher%20House.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Deep%20Blue.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Foam%20Plants.jpg"/> 
+            </div>
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Cookie%20W_%20Milk.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Strawberry%20Shortcake.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Sunlight%20Reef.jpg"/> 
+            </div>
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoCharizard.png"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoToxicSpike.png"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoViridianForest.png"/> 
+            </div>
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Blood%20Orangecropped.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Cool%20Breezecropped.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Seashellscropped.jpg"/> 
             </div>
         </main>
     <!-- rightside begins here -->
