--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -20,12 +20,15 @@
     <!-- leftside begins here -->
         <main class="bigboxleft">
                 <span>Target Market</span>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg"/> 
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/>
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbackwaist.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbottom.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsfull.jpg"/> 
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantspocket.jpg"/>
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantswaist.jpg"/> 
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
