adding in images

--- a/FDSA.html
+++ b/FDSA.html
@@ -19,15 +19,29 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/>
-                <img class="multimage" src="https://dersportfoliobucket.s3.us-east-2.amazonaws.com/Anders+Law+Resume+.pdf"/> 
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa1.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa2.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa3.jpg"/> 
+            </div>
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa4.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa5.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa6.jpg"/> 
+            </div>
+            <span>text here</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW23/fdsa7.JPG"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW23/fdsa8.JPG"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW23/fdsa9.JPG"/> 
+            </div>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                Lectra Kaledo
+                FDSA
             </div>
         </aside>
         <!-- navbar stuff-->
@@ -36,8 +50,9 @@
                 <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
-                <li><a class="navtext" href="#">codingtwogo</a></li>
-                <li><a class="navtext" href="#">codingtwogo</a></li>
+                <li><a class="navtext" href="FDSA.html">FDSA</a></li>
+                <li><a class="navtext" href="#">3D Modeling</a></li>
+                <li><a class="navtext" href="#">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
