--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+        <!--logos down here-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <!--java stuff-->
         <script type="text/javascript" src="java.js"></script>
     </head>
@@ -19,17 +21,23 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
-        </main>
+            <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking the sewing lab</span>
+                        <div class="logogroup">
+                            <a id="linkedcolor" class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a id="gitcolor" class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a id="youcolor" class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </div>    
+                 </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                resume
-            </div>
-            <div class="bottomtextbox">
-                <span>
-                    <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">click here for pdf download</a>
-                </span>
+                Contact
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
@@ -41,11 +49,11 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
+                <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="#">3D Modeling</a></li>
-                <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
