--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -37,7 +37,7 @@
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
-                    I
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </button>
             </div>
         </aside>
@@ -48,7 +48,7 @@
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="#">3D Modeling</a></li>
+                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
