--- a/3d.html
+++ b/3d.html
@@ -3,9 +3,9 @@
     
   <!-- Metadata for the page -->
     <head>
-        <title>HomePage</title>
+        <title>ResumePage</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="(home)re.css" />
+        <link rel="stylesheet" href="(pages)re.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Google fonts stuff below-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,41 +14,42 @@
 <!--java stuff-->
         <script type="text/javascript" src="java.js"></script>
     </head>
-  <!-- Visible content for the page-->
-  <!--main page text below-->
-  <body class="mainbody">
-    <div class="papaflex">
-        <aside class="homeaside">
-            <div class="textcontainer">
-                <span class="asidetext">an</span>
-                <span class="asidetext nametext">Anders Law</span>
-                <span class="asidetext">website</span>
+  <!-- Visible content for the page -->
+  <body class="bodytag">
+    <div class="biggestflex">
+    <!-- leftside begins here -->
+        <main class="bigboxleft">
+                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+        </main>
+    <!-- rightside begins here -->
+        <aside class="bigboxright">
+            <div class="toptextbox">
+                Resume
             </div>
-            <!--buttonstuff in here-->
+            <div class="bottomtextbox">
+                <span>
+                    <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">click here for pdf download</a>
+                </span>
+            </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </button>
             </div>
         </aside>
-    <!-- navbar stuff-->
+        <!-- navbar stuff-->
         <nav>
             <ul class="sidebar">
-                <li><a class="navtext" href="re(sume).html">Resume</a></li>
+                <li><a class="navtext" href="index.html">Home</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
+                <li><a class="navtext" href="#">3D Modeling</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
-    <!-- stuff for the side coloum with the picture-->
-        <main class="homemain">
-            <div class="imgholster">
-                    hello
-            </div>
-        </main>
     </div>
+
   </body>
 </html>
