--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,15 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <span id="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking the sewing lab</span>
+            <span class="contactinfo">1+ 678-751-6962<br>anderstlaw@gmail.com<br><br>if i am not available through any of these methods, i suggest checking the sewing lab</span>
                         <div class="logogroup">
-                            <a id="linkedcolor" class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
+                            <a class="logos" href="https://www.linkedin.com/in/anders-law-b0033a20a/" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i>
                             </a>
-                            <a id="gitcolor" class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
+                            <a class="logos" href="https://github.com/weekendpapa?tab=repositories" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-github"></i>
                             </a>
-                            <a id="youcolor" class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
+                            <a class="logos" href="https://www.youtube.com/channel/UClS_jO70hsDiLzHre1ibTCQ" target="_blank" rel="nofollow noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i>
                             </a>
                         </div>    
@@ -41,7 +41,7 @@
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
-                    I
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </button>
             </div>
         </aside>
@@ -53,7 +53,7 @@
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="#">3D Modeling</a></li>
+                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
