--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -19,31 +19,29 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <span>text here</span>
-            <div class="rowbox">
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Night%20Swimming.jpg"/>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Original%20Fence.jpg"/>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Sienna%20Steps.jpg"/> 
-            </div>
-            <span>text here</span>
+            <span class="kaledotext">Kaledo Print</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Butcher%20House.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Deep%20Blue.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/HauntedHouse/AndersLawHauntedPrintLayout_Foam%20Plants.jpg"/> 
             </div>
-            <span>text here</span>
-            <div class="rowbox">
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Cookie%20W_%20Milk.jpg"/>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Strawberry%20Shortcake.jpg"/>
-                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Sunlight%20Reef.jpg"/> 
-            </div>
-            <span>text here</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoCharizard.png"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoToxicSpike.png"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/kanto/KantoViridianForest.png"/> 
             </div>
-            <span>text here</span>
+            <span class="kaledotext">Kaledo Knit</span>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Cookie%20W_%20Milk.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Strawberry%20Shortcake.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Likklesimz/AndersLawKnitPatternSimz_Sunlight%20Reef.jpg"/> 
+            </div>
+            <div class="rowbox">
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Night%20Swimming.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Original%20Fence.jpg"/>
+                <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/Boards/AndersLawKnitStripeBoards_Sienna%20Steps.jpg"/> 
+            </div>
+            <span class="kaledotext">Kaledo Weave</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Blood%20Orangecropped.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/Kaledo/weave/weave4web_Cool%20Breezecropped.jpg"/>
@@ -63,14 +61,14 @@
                 <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="#">3D Modeling</a></li>
+                <li><a class="navtext" href="3d.html">3D Modeling</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
         <div class="buttonholder">
             <button class="navbutton" onclick=showsidebar()>
-                I
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
             </button>
         </div>
     </div>
