--- a/3d.html
+++ b/3d.html
@@ -13,22 +13,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 <!--java stuff-->
         <script type="text/javascript" src="java.js"></script>
+        <!--model viewer-->
+        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     </head>
   <!-- Visible content for the page -->
   <body class="bodytag">
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+            <model-viewer id="donut" src="3d assets/donutcompressednoplane.glb" loading="eager" alt="3D Donut Loading" camera-controls disable-zoom></model-viewer>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                Resume
+                3D Modeling
             </div>
             <div class="bottomtextbox">
                 <span>
-                    <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">click here for pdf download</a>
+                    More Coming Soon!!!
                 </span>
             </div>
             <div class="buttonholder">
@@ -41,10 +43,10 @@
         <nav>
             <ul class="sidebar">
                 <li><a class="navtext" href="index.html">Home</a></li>
+                <li><a class="navtext" href="re(sume).html">Resume</a></li>
                 <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
-                <li><a class="navtext" href="#">3D Modeling</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
