image text stuff

--- a/3d.html
+++ b/3d.html
@@ -21,6 +21,7 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
+            <span class="kaledotext">Donut</span>
             <model-viewer id="donut" src="3d assets/donutcompressednoplane.glb" loading="eager" alt="3D Donut Loading" camera-controls disable-zoom></model-viewer>
         </main>
     <!-- rightside begins here -->
