--- a/FDSA.html
+++ b/FDSA.html
@@ -19,19 +19,19 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <span>text here</span>
+            <span class="kaledotext">F/W 22</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa1.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa2.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW22/fdsa3.jpg"/> 
             </div>
-            <span>text here</span>
+            <span class="kaledotext">S/S 23</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa4.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa5.jpg"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/SS23/fdsa6.jpg"/> 
             </div>
-            <span>text here</span>
+            <span class="kaledotext">F/W 23</span>
             <div class="rowbox">
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW23/fdsa7.JPG"/>
                 <img class="multimage" src="https://storage.googleapis.com/derswebsitebucket/FDSA/FW23/fdsa8.JPG"/>
