--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -19,14 +19,18 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-                <span>Target Market</span>
+                <span class="kaledotext">Target Market</span>
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/targetjpeg2.jpg"/>
+                <span class="kaledotext">MoodBoard</span>
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/inspojpeg.jpg"/> 
-                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/> 
+                <span class="kaledotext">Line Sheet</span>
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/Linesheetjpeg.jpg"/>
+                <span class="kaledotext">Lead Sheet</span> 
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/leadsheetjpeg.jpg"/> 
+                <span class="kaledotext">Constructed Garment</span>
+                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsfull.jpg"/> 
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbackwaist.jpg"/> 
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsbottom.jpg"/> 
-                <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantsfull.jpg"/> 
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantspocket.jpg"/>
                 <img class="multimagetxmi" src="https://storage.googleapis.com/derswebsitebucket/TXMICapstone/sampantswaist.jpg"/> 
         </main>
