designs coming in!

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                Contact
+                <a>Contact</a>
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
