--- a/re(sume).html
+++ b/re(sume).html
@@ -20,16 +20,16 @@
     <!-- leftside begins here -->
         <main class="bigboxleft">
                 <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+                <div class="bottomtextbox">
+                    <span>
+                        <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">Click here for PDF!</a>
+                    </span>
+                </div>
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                Resume
-            </div>
-            <div class="bottomtextbox">
-                <span>
-                    <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">click here for pdf download</a>
-                </span>
+                <a>Resume</a>
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
