--- a/(re)txmi.html
+++ b/(re)txmi.html
@@ -37,7 +37,7 @@
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                TXMI Capstone
+                <a>TXMI Capstone</a>
             </div>
             <div class="buttonholder">
                 <button class="navbutton" onclick=showsidebar()>
