--- a/ka(re)do.html
+++ b/ka(re)do.html
@@ -51,7 +51,7 @@
     <!-- rightside begins here -->
         <aside class="bigboxright">
             <div class="toptextbox">
-                Lectra Kaledo
+                <a>Lectra Kaledo</a>
             </div>
         </aside>
         <!-- navbar stuff-->
