--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- stuff for the side coloum with the picture-->
         <main class="homemain">
             <div class="imgholster">
-                <a>hello</a>
+                <img class="titlecard" src="https://storage.googleapis.com/derswebsitebucket/derscard.png" alt="Anders Law">
             </div>
         </main>
     </div>
