--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="3d.html">3D Modeling</a></li>
+                <li><a class="navtext" href="skatew.html">Stattrak</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
@@ -46,7 +47,7 @@
     <!-- stuff for the side coloum with the picture-->
         <main class="homemain">
             <div class="imgholster">
-                <img class="titlecard" src="https://storage.googleapis.com/derswebsitebucket/derscard2.png" alt="Anders Law">
+                <img class="titlecard" src="https://storage.googleapis.com/derswebsitebucket/homeimage/derscard2.png" alt="Anders Law">
             </div>
         </main>
     </div>
