home page restructure

--- a/re(sume).html
+++ b/re(sume).html
@@ -22,7 +22,7 @@
             <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
                 <div class="bottomtextbox">
                     <span>
-                        <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" rel="nofollow noopener noreferrer">Click here for PDF!</a>
+                        <a href="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume.pdf" target="_blank" rel="nofollow noopener noreferrer">Click here for PDF!</a>
                     </span>
                 </div>
         </main>
