--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a class="navtext" href="FDSA.html">FDSA</a></li>
                 <li><a class="navtext" href="3d.html">3D Modeling</a></li>
                 <li><a class="navtext" href="skatew.html">Stattrak</a></li>
+                <li><a class="navtext" href="ghutra.html">Ghutra</a></li>
                 <li><a class="navtext" href="contact.html">Contact</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
