ghutra files added

--- a/ghutra.html
+++ b/ghutra.html
@@ -19,10 +19,12 @@
     <div class="biggestflex">
     <!-- leftside begins here -->
         <main class="bigboxleft">
-            <img class="resumeimage" src="https://storage.googleapis.com/derswebsitebucket/stattrack/Stattrack%20(cover).png"/>
+            <img class="bigresumeimage" src="https://storage.googleapis.com/derswebsitebucket/Ghutra/ghutra%20image.jpeg"/>
                 <div class="bottomtextbox">
                     <span>
-                        <a href="https://storage.googleapis.com/derswebsitebucket/stattrack/Stattrack%20(forweb).pdf" target="_blank" rel="nofollow noopener noreferrer">Click here for PDF!</a>
+                        <a href="https://storage.googleapis.com/derswebsitebucket/Ghutra/Ghutra.pdf" target="_blank" rel="nofollow noopener noreferrer">PowerPoint Here!</a>
+                        <a href="https://storage.googleapis.com/derswebsitebucket/Ghutra/Paper%20Final.pdf" target="_blank" rel="nofollow noopener noreferrer">Paper Here!</a>
+               
                 </div>
         </main>
     <!-- rightside begins here -->
