--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     <!-- stuff for the side coloum with the picture-->
         <main class="homemain">
             <div class="homemodel">
-                <model-viewer id="orbit-demo" interpolation-decay="200" src="3d assets/card.glb" 
+                <model-viewer id="orbit-demo" interpolation-decay="200" src="3d assets/card5.glb" 
                 camera-controls 
                 min-field-of-view='50deg'
                 max-field-of-view='50deg'
+                interaction-prompt="none"
                 alt="A 3D model of a card"></model-viewer>
                     <script>
                     (() => {
