--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="java.js"></script>
         <!--model viewer-->
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-        <link rel="shortcut icon" type="image/ico" href="items/icons8-star-64.png">
+        <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
     </head>
   <!-- Visible content for the page-->
   <!--main page text below-->
