--- a/3d.html
+++ b/3d.html
@@ -23,6 +23,9 @@
         <main class="bigboxleft">
             <span class="kaledotext">Donut</span>
             <model-viewer id="donut" src="3d assets/donutcompressednoplane.glb" loading="eager" alt="3D Donut Loading" camera-controls disable-zoom></model-viewer>
+            <span class="kaledotext">Business Card</span>
+            <model-viewer id="donut" src="3d assets/card7.glb" loading="eager" alt="Business Card Swiveling" camera-controls disable-zoom camera-orbit="250deg 75deg 100%"></model-viewer>
+        
         </main>
     <!-- rightside begins here -->
         <aside class="bigboxright">
