minor model change

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         <main class="homemain">
             <div class="homemodel">
                 <model-viewer id="orbit-demo" interpolation-decay="200" src="3d assets/card7.glb" 
-                camera-controls 
-                min-field-of-view='50deg'
-                max-field-of-view='50deg'
+                camera-orbit="250deg 75deg 100%"
+                camera-controls min-field-of-view='50deg' max-field-of-view='50deg'
                 interaction-prompt="none"
                 alt="A 3D model of a card"></model-viewer>
                     <script>
