--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <button class="navbutton" onclick=showsidebar()>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </button>
+                <span class="navgone">Mobile Version of Anders Law's Portfolio is Still in Progress! <br> Please Use Desktop Browser. <br> Thank You! </span>
             </div>
         </aside>
     <!-- navbar stuff-->
