home page is cookin

--- a/tfhome.html
+++ b/tfhome.html
@@ -23,20 +23,20 @@
     <header class="homeheader" >Trampled Flowers Logo</header>
     <div class="homeflex">
         <div class="homeflextext"> <span>Trampled Flowers</span> </div>
-        <img class="homefleximage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+        <img class="homefleximage" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/sydney%20shots%20v1/DSC_5749.jpg"/>
     </div>
 
     <div class="homeflexbelow">
-        <img class="homeimage" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
-        <img class="homeimage2" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+        <img class="homeimage" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Summer%20Shots/P7020162.JPG"/>
+        <img class="homeimage2" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Best%20JPGS%20(Anders)/P7180454.jpg"/>
     </div>
 
     <div class="homeflexbelower">
-        <img class="homeimage3" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
-        <img class="homeimage4" src="https://storage.googleapis.com/derswebsitebucket/Resume/Anders%20Law%20Resume%20jpg.jpg"/>
+        <img class="homeimage3" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/sydney%20shots%20v1/DSC_5843.jpg"/>
+        <img class="homeimage4" src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Best%20JPGS%20(Anders)/P7180443.jpg"/>
     </div>
     <div class="homeflexbelowest">
-        <span class="homeinfo" >Talk about clicking pics</span>
+        <span class="homeinfo" >Click on the Crest or Any of the Photos to Begin</span>
     </div>
     </body>
 </html>
