--- a/trampled flowers/tfhome.html
+++ b/trampled flowers/tfhome.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 <!--java stuff-->
-        <script type="text/javascript" src="java.js"></script>
+        <script type="text/javascript" src="tfjava.js"></script>
         <!--model viewer-->
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
         <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
@@ -27,9 +27,13 @@
 
         <nav class="sidebarnav">
             <ul class="sidebar">
-                <li><a class="navtext" href="re(sume).html">Resume</a></li>
-                <li><a class="navtext" href="(re)txmi.html">TXMI Capstone</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Lectra Kaledo</a></li>
+                <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
+                <li><a class="navtext" href="(re)txmi.html">WIP</a></li>
+                <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
+                <li><a class="navtext" href="ka(re)do.html">Product Shots</a></li>
+                <li><a class="navtext" href="ka(re)do.html">Promo Material</a></li>
+                <li><a class="navtext" href="ka(re)do.html">Release Party</a></li>
+                <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
                 <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             </ul>
         </nav>
@@ -52,7 +56,7 @@
     </div>
 
     <div class="homeflexbelowest">
-        <span class="homeinfo" >Click on the Crest to Begin</span>
+        <span class="homeinfo" >Click on Crest to Begin</span>
     </div>
 
     </body>
