galleria is online

--- a/trampled flowers/tfhome.html
+++ b/trampled flowers/tfhome.html
@@ -28,7 +28,7 @@
         <nav class="sidebarnav">
             <ul class="sidebar">
                 <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
-                <li><a class="navtext" href="(re)txmi.html">WIP</a></li>
+                <li><a class="navtext" href="wip.html">WIP</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Product Shots</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Promo Material</a></li>
