prodshots plus text format

--- a/trampled flowers/photoshoot.html
+++ b/trampled flowers/photoshoot.html
@@ -32,7 +32,7 @@
             <li><a class="navtext" href="tfhome.html">Home</a></li>
             <li><a class="navtext" href="wip.html">WIP</a></li>
             <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
-            <li><a class="navtext" href="ka(re)do.html">Product Shots</a></li>
+            <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
             <li><a class="navtext" href="ka(re)do.html">Promo Material</a></li>
             <li><a class="navtext" href="ka(re)do.html">Release Party</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
