--- a/trampled flowers/tfhome.html
+++ b/trampled flowers/tfhome.html
@@ -30,7 +30,7 @@
                 <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
                 <li><a class="navtext" href="wip.html">WIP</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Product Shots</a></li>
+                <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Promo Material</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Release Party</a></li>
                 <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
