--- a/trampled flowers/promo.html
+++ b/trampled flowers/promo.html
@@ -33,7 +33,7 @@
             <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
             <li><a class="navtext" href="wip.html">WIP</a></li>
             <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
-            <li><a class="navtext" href="promo.html">Promo Material</a></li>
+            <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
             <li><a class="navtext" href="ka(re)do.html">Release Party</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
             <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
@@ -45,9 +45,9 @@
     </div>
     <!-- Photo Grid -->
     <div class="row"> 
-      <div class="column">
+      <div class="procolumn">
             <div class="pictextholder"><span>Heavens Candle</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/Heavcan(undershirt).jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Party%20Flyer/Collective%20Flyerjpeg.jpg" style="width:100%">
             <div class="pictextholdersub"><span>Undershirt (Front)</span></div>
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(cloak).jpg" style="width:100%">
             <div class="pictextholdersub"><span>Cloak (Front)</span></div>
@@ -58,38 +58,18 @@
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(skirt).jpg" style="width:100%">
             <div class="pictextholdersub"><span>Skirt (Front)</span></div>
       </div>
-      <div class="column">
-            <div class="pictextholder"><span>Jester</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/jester(top).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Top (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/jester(undershirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Undershirt (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/jester(skirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Skirt (Front)</span></div>
-      </div>  
-      <div class="column">
+      <div class="procolumn">
+        
+  </div>  
+      <div class="procolumn">
             <div class="pictextholder"><span>Princess</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/princess(dress).jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/Ansley%20flyer(text).png" style="width:100%">
             <div class="pictextholdersub"><span>Dress (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/princess(cloak).jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/group%20flyer(done).png" style="width:100%">
         <div class="pictextholdersub"><span>Cloak (Side)</span></div>
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/princess(skirt).jpg" style="width:100%">
             <div class="pictextholdersub"><span>Skirt (Front)</span></div>
       </div>
-      <div class="column">
-            <div class="pictextholder"><span>Shadow Proj</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/shadowproj(undershirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Undershirt (Back)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/shadowproj(overshirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Overshirt (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/shadowproj(jacket).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Jacket (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/shadowproj(pants).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Pants (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/shadowproj(skirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Skirt (Front)</span></div>
-      </div>
-    </div>
     
     <div class="quotebox">
         <span>hello</span>
