promo setup complete

--- a/trampled flowers/promo.html
+++ b/trampled flowers/promo.html
@@ -46,29 +46,20 @@
     <!-- Photo Grid -->
     <div class="row"> 
       <div class="procolumn">
-            <div class="pictextholder"><span>Heavens Candle</span></div>
+            <div class="promotextholder"><span>Party Flyers</span></div>
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Party%20Flyer/Collective%20Flyerjpeg.jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Undershirt (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(cloak).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Cloak (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(overshirt2).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Overshirt (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(pants).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Pants (Front)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/heavcan(skirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Skirt (Front)</span></div>
       </div>
       <div class="procolumn">
-        
+        <div class="promotextholder"><span>Posters</span></div>
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1darkk.png" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1jester-Edit.png" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1lightknight-Edit.png" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1princess-Edit.png" style="width:100%">
   </div>  
       <div class="procolumn">
-            <div class="pictextholder"><span>Princess</span></div>
+            <div class="promotextholder"><span>Prints</span></div>
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/Ansley%20flyer(text).png" style="width:100%">
-            <div class="pictextholdersub"><span>Dress (Front)</span></div>
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/group%20flyer(done).png" style="width:100%">
-        <div class="pictextholdersub"><span>Cloak (Side)</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/product%20shots(edited)/princess(skirt).jpg" style="width:100%">
-            <div class="pictextholdersub"><span>Skirt (Front)</span></div>
       </div>
     
     <div class="quotebox">
