party photos added

--- a/trampled flowers/prodshots.html
+++ b/trampled flowers/prodshots.html
@@ -34,7 +34,7 @@
             <li><a class="navtext" href="wip.html">WIP</a></li>
             <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
             <li><a class="navtext" href="promo.html">Promo Material</a></li>
-            <li><a class="navtext" href="ka(re)do.html">Release Party</a></li>
+            <li><a class="navtext" href="release.html">Release Party</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
             <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
         </ul>
