--- a/trampled flowers/release.html
+++ b/trampled flowers/release.html
@@ -34,7 +34,7 @@
             <li><a class="navtext" href="wip.html">WIP</a></li>
             <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
             <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
-            <li><a class="navtext" href="release.html">Release Party</a></li>
+            <li><a class="navtext" href="promo.html">Promo Material</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
             <li onclick=hidesidebar()><a class="navclose" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
         </ul>
@@ -45,22 +45,28 @@
     </div>
     <!-- Photo Grid -->
     <div class="row"> 
-      <div class="procolumn">
-            <div class="promotextholder"><span>Party Flyers</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Party%20Flyer/Collective%20Flyerjpeg.jpg" style="width:100%">
+      <div class="column">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200512.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200520.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200524.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/Sets/PrincessSET1-2.jpg" style="width:100%">
       </div>
-      <div class="procolumn">
-        <div class="promotextholder"><span>Posters</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1darkk.png" style="width:100%">
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1jester-Edit.png" style="width:100%">
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1lightknight-Edit.png" style="width:100%">
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/liam%3Aaddi%20edits/1princess-Edit.png" style="width:100%">
-  </div>  
-      <div class="procolumn">
-            <div class="promotextholder"><span>Prints</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/Ansley%20flyer(text).png" style="width:100%">
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/group%20flyer(done).png" style="width:100%">
+      <div class="column">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/Sets/LKSET.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200505.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200536.jpg" style="width:100%">
+      </div>  
+      <div class="column">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200539.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/Sets/DKSET.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/Sets/JesterSET.jpg" style="width:100%">
       </div>
+      <div class="column">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200544.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/P7200555.jpg" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/JPEGS/Sets/DKLKRACK.jpg" style="width:100%">
+      </div>
+    </div>
     
     <div class="quotebox">
         <span>hello</span>
