--- a/trampled flowers/tfhome.html
+++ b/trampled flowers/tfhome.html
@@ -29,7 +29,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
                 <li><a class="navtext" href="wip.html">WIP</a></li>
-                <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
+                <li><a class="navtext" href="sheets.html">Production Sheets</a></li>
                 <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
                 <li><a class="navtext" href="promo.html">Promo Material</a></li>
                 <li><a class="navtext" href="release.html">Release Party</a></li>
