--- a/trampled flowers/wip.html
+++ b/trampled flowers/wip.html
@@ -31,7 +31,7 @@
         <ul class="sidebar">
             <li><a class="navtext" href="tfhome.html">Home</a></li>
             <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
-            <li><a class="navtext" href="ka(re)do.html">Production Sheets</a></li>
+            <li><a class="navtext" href="sheets.html">Production Sheets</a></li>
             <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
             <li><a class="navtext" href="promo.html">Promo Material</a></li>
             <li><a class="navtext" href="release.html">Release Party</a></li>
