--- a/trampled flowers/prodshots.html
+++ b/trampled flowers/prodshots.html
@@ -92,7 +92,7 @@
     </div>
     
     <div class="quotebox">
-        <span>hello</span>
+        <span>See Credits for More Information</span>
     </div>
 
     </body>
