--- a/trampled flowers/promo.html
+++ b/trampled flowers/promo.html
@@ -66,7 +66,7 @@
       </div>
     
     <div class="quotebox">
-        <span>hello</span>
+        <span>See Credits for More Information</span>
     </div>
 
     </body>
