--- a/trampled flowers/wip.html
+++ b/trampled flowers/wip.html
@@ -44,6 +44,9 @@
     <div class="sup">
     </div>
     <!-- Photo Grid -->
+    <div class="momheader"> 
+      <span>Designed, Patterned, Prototyped, Fabric Selection, <br>Constructed, Styled and Shot by Anders Law, Liam Scott, and Jackson Dallas*</span>
+    </div>
     <div class="row"> 
       <div class="column">
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Summer%20Shots/P7090173.JPG" style="width:100%">
@@ -77,7 +80,7 @@
     </div>
     
     <div class="quotebox">
-        <span>hello</span>
+        <span>*See Credits for More Information</span>
     </div>
 
     </body>
