--- a/trampled flowers/prodshots.html
+++ b/trampled flowers/prodshots.html
@@ -32,7 +32,7 @@
             <li><a class="navtext" href="tfhome.html">Home</a></li>
             <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
             <li><a class="navtext" href="wip.html">WIP</a></li>
-            <li><a class="navtext" href="sheets.html">Production Sheets</a></li>
+            <li><a class="navtext" href="sheets.html">Line Sheets</a></li>
             <li><a class="navtext" href="promo.html">Promo Material</a></li>
             <li><a class="navtext" href="release.html">Release Party</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
