--- a/trampled flowers/tfhome.html
+++ b/trampled flowers/tfhome.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="tfjava.js"></script>
         <!--model viewer-->
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-        <link rel="shortcut icon" type="image/x-icon" href="items/icons8-star-64.png">
+        <link rel="shortcut icon" type="image/x-icon" href="items/TFcrest%20copy%20vtrans">
     </head>
   <!-- Visible content for the page-->
   <!--main page text below-->
@@ -29,7 +29,7 @@
             <ul class="sidebar">
                 <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
                 <li><a class="navtext" href="wip.html">WIP</a></li>
-                <li><a class="navtext" href="sheets.html">Production Sheets</a></li>
+                <li><a class="navtext" href="sheets.html">Line Sheets</a></li>
                 <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
                 <li><a class="navtext" href="promo.html">Promo Material</a></li>
                 <li><a class="navtext" href="release.html">Release Party</a></li>
