--- a/trampled flowers/promo.html
+++ b/trampled flowers/promo.html
@@ -32,7 +32,7 @@
             <li><a class="navtext" href="tfhome.html">Home</a></li>
             <li><a class="navtext" href="photoshoot.html">Photoshoot</a></li>
             <li><a class="navtext" href="wip.html">WIP</a></li>
-            <li><a class="navtext" href="sheets.html">Production Sheets</a></li>
+            <li><a class="navtext" href="sheets.html">Line Sheets</a></li>
             <li><a class="navtext" href="prodshots.html">Product Shots</a></li>
             <li><a class="navtext" href="release.html">Release Party</a></li>
             <li><a class="navtext" href="ka(re)do.html">Credits</a></li>
@@ -61,8 +61,8 @@
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/Ansley%20flyer(text).png" style="width:100%">
         <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/group%20flyer(done).png" style="width:100%">
             <div class="promotextholder"><span>Tape</span></div>
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/trampledflowerstapefinal2.png" style="width:100%">
-        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/Handouts%3APoster/group%20flyer(done).png" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/tape/trampledflowerstapefinal2.png" style="width:100%">
+        <img src="https://storage.googleapis.com/derswebsitebucket/Trampled%20Flowers/tape/tape%20edit%202%20(use)-2.jpg" style="width:100%">
       </div>
     
     <div class="quotebox">
